deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobsight-pro-service
  namespace: jobsight
  labels:
    app: jobsight-pro
spec:
  selector:
    app: jobsight-pro
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
