deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobsight-pro-ingress
  namespace: jobsight
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: jobsight-encrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-ssl: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pro.jobsight.co
      secretName: jobsight-pro-tls
  rules:
    - host: pro.jobsight.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jobsight-pro-service
                port:
                  number: 80
